--- a/1- Intersection Observer/index.html
+++ b/1- Intersection Observer/index.html
@@ -23,7 +23,7 @@
         overflow-y: scroll;
         }
     </style>
-    <script src="/app.js" defer></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
     <h1>Intersection Observer API</h1>
