--- a/8- Geolocation/index.html
+++ b/8- Geolocation/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
     <h1>Geolocation</h1>
